--- a/htmlTable.html
+++ b/htmlTable.html
@@ -93,5 +93,79 @@
             </tr>
         </tbody>
     </table>
+
+    <br>
+    <br>
+    <br>
+
+    <table border ='1'>
+       <tbody>
+           <tr>
+               <td>
+
+               </td>
+               <td>
+
+               </td>
+               <td colspan = '3'>
+                   Clothes
+               </td>
+               <td colspan ='2'>
+                   Accessories
+               </td>
+           </tr>
+           <tr>
+               <td></td>
+               <td></td>
+               <td>Trousers</td>
+               <td>Skirts</td>
+               <td>Dresses</td>
+               <td>Bracelets</td>
+               <td>Rings</td>
+           </tr>
+           <tr>
+               <td rowspan = '3'> Belgium</td>
+               <td>Antwerp</td>
+               <td>56</td>
+               <td>22</td>
+               <td>43</td>
+               <td>72</td>
+               <td>23</td>
+           </tr>
+           <tr>
+               <td>Gent</td>
+               <td>46</td>
+               <td>18</td>
+               <td>50</td>
+               <td>61</td>
+               <td>15</td>
+           </tr>
+           <tr>
+            <td>Brussels</td>
+            <td>51</td>
+            <td>27</td>
+            <td>38</td>
+            <td>69</td>
+            <td>28</td>
+        </tr>
+        <tr>
+             <td rowspan ='2'> The Netherlands</td>
+             <td>Amsterdam</td>
+             <td>89</td>
+             <td>34</td>
+             <td>69</td>
+             <td>85</td>
+             <td>38</td>
+        </tr>
+        <tr>
+            <td>Utrecht</td>
+            <td>80</td>
+            <td>12</td>
+            <td>43</td>
+            <td>36</td>
+            <td>19</td>
+       </tr>
+       </tbody>
+    </table>
 </body>
 </html>
