Header added in the third table in htmlTable.html file

--- a/htmlTable.html
+++ b/htmlTable.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+   
     <table border='1'>
         <tbody >
             <tr>
@@ -97,7 +98,7 @@
     <br>
     <br>
     <br>
-
+    <h3>Items Sold August 2016</h3>
     <table border ='1'>
        <tbody>
            <tr>
