separated header cells from other ones in htmlTable.html file

--- a/htmlTable.html
+++ b/htmlTable.html
@@ -11,10 +11,10 @@
     <table border='1'>
         <tbody >
             <tr>
-                <td>celda1</td>
-                <td>celda2</td>
-                <td>celda3</td>
-                <td>celda4</td>
+                <th>celda1</th>
+                <th>celda2</th>
+                <th>celda3</th>
+                <th>celda4</th>
             </tr>
             <tr >
                 <td rowspan='3'>celda5</td>
@@ -108,25 +108,25 @@
                <td>
 
                </td>
-               <td colspan = '3'>
+               <th colspan = '3'>
                    Clothes
-               </td>
-               <td colspan ='2'>
+               </thd>
+               <th colspan ='2'>
                    Accessories
-               </td>
+               </th>
            </tr>
            <tr>
                <td></td>
                <td></td>
-               <td>Trousers</td>
-               <td>Skirts</td>
-               <td>Dresses</td>
-               <td>Bracelets</td>
-               <td>Rings</td>
+               <th>Trousers</th>
+               <th>Skirts</th>
+               <th>Dresses</th>
+               <th>Bracelets</th>
+               <th>Rings</th>
            </tr>
            <tr>
-               <td rowspan = '3'> Belgium</td>
-               <td>Antwerp</td>
+               <th rowspan = '3'> Belgium</th>
+               <th>Antwerp</th>
                <td>56</td>
                <td>22</td>
                <td>43</td>
@@ -134,7 +134,7 @@
                <td>23</td>
            </tr>
            <tr>
-               <td>Gent</td>
+               <th>Gent</th>
                <td>46</td>
                <td>18</td>
                <td>50</td>
@@ -142,7 +142,7 @@
                <td>15</td>
            </tr>
            <tr>
-            <td>Brussels</td>
+            <th>Brussels</th>
             <td>51</td>
             <td>27</td>
             <td>38</td>
@@ -150,8 +150,8 @@
             <td>28</td>
         </tr>
         <tr>
-             <td rowspan ='2'> The Netherlands</td>
-             <td>Amsterdam</td>
+             <th rowspan ='2'> The Netherlands</th>
+             <th>Amsterdam</th>
              <td>89</td>
              <td>34</td>
              <td>69</td>
@@ -159,7 +159,7 @@
              <td>38</td>
         </tr>
         <tr>
-            <td>Utrecht</td>
+            <th>Utrecht</th>
             <td>80</td>
             <td>12</td>
             <td>43</td>
